[MODIFY] Swagger for sanctum Authentication api
